circle ci: login to docker hub before pushing

--- a/circle.yml
+++ b/circle.yml
@@ -15,4 +15,5 @@ deployment:
     branch: master
     commands:
       - ./build.sh
+      - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
       - docker push ictu/rocketbot
