--- a/scripts/package.json
+++ b/scripts/package.json
@@ -9,10 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "githubot": "^1.0.0",
     "jenkins": "^0.19.0",
-    "jenkins-api": "^0.2.8",
-    "mongodb": "^2.2.10",
-    "pad": "^0.1.0"
+    "lodash": "^4.17.2",
+    "mongodb": "^2.2.10"
   }
 }
