--- a/circle.yml
+++ b/circle.yml
@@ -12,8 +12,12 @@ test:
 
 deployment:
   hub:
-    branch: master
+    tag: /^[0-9]+\.[0-9]+\.[0-9]+$/
     commands:
-      - ./build.sh
+      - docker build -t ictu/rocketbot:${CIRCLE_TAG} .
+      - MAJOR_VERSION=${CIRCLE_TAG/.*}; docker tag ictu/rocketbot:${CIRCLE_TAG} ictu/rocketbot:${MAJOR_VERSION}
+      - MINOR_VERSION=${CIRCLE_TAG%.*}; docker tag ictu/rocketbot:${CIRCLE_TAG} ictu/rocketbot:${MINOR_VERSION}
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-      - docker push ictu/rocketbot
+      - docker push ictu/rocketbot:${CIRCLE_TAG}
+      - docker push ictu/rocketbot:${MINOR_VERSION}
+      - docker push ictu/rocketbot:${MAJOR_VERSION}
