--- a/scripts/package.json
+++ b/scripts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gist-bot",
+  "name": "scripts",
   "version": "0.0.0",
   "description": "",
   "main": "index.js",
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "jenkins": "^0.19.0",
-    "lodash": "^4.17.2"
+    "lodash": "^4.17.2",
+    "mongodb": "^2.2.10"
   }
 }
